add s81 activity code

--- a/index.html
+++ b/index.html
@@ -61,22 +61,22 @@
     <div class="row justify-content-center align-items-center py-md-5 my-md-1">
         
         <!-- Heading Section -->
-        <div class="col-lg-5 col-md-6 text-center text-md-start text-center">
-            <h1 id="text-title" class="mb-4 text-center">Why Choose Us?</h1>
-            <h3 class="text2 text-center">🏆 Premium Gunpla Selection</h3>
+        <div class="col-lg-5 col-md-6 col-12 text-center text-md-start">
+            <h1 id="text-title" class="mb-4">Why Choose Us?</h1>
+            <h3 class="text2">🏆 Premium Gunpla Selection</h3>
             <p class="text mt-3">We offer an exclusive range of high-quality Gundam model kits for every collector and enthusiast.</p>
-            <ul class="text">
-            	<li>🚀 <strong>Authenticity Guaranteed</strong> - All our kits are 100% official Bandai products—no bootlegs, just top-quality Gunpla!</li>
-            	<li>🔥 <strong>Exclusive Deals & Discounts</strong> - Enjoy special discounts, pre-order benefits, and bundle offers you won’t find anywhere else.</li>
-            	<li>📦 <strong>Fast & Secure Shipping</strong> - We ensure safe, fast, and well-packaged delivery to protect your Gunpla from damage during transit.</li>
-            	<li>🛠️ <strong>Gunpla Tools & Accessories</strong> - From nippers, panel liners, and display stands—we provide everything you need to build and customize your Gundam models.</li>
-            	<li>💬 <strong>Expert Support & Community</strong> - Need help with a build? Our team and community of Gunpla enthusiasts are here to assist with tips, guides, and recommendations.</li>
-            	<li>⭐ <strong>Customer Satisfaction Guarantee</strong> - Your happiness is our priority! Hassle-free returns and excellent customer support ensure a smooth shopping experience.</li>
+            <ul class="text text-start">
+                <li>🚀 <strong>Authenticity Guaranteed</strong> - All our kits are 100% official Bandai products—no bootlegs, just top-quality Gunpla!</li>
+                <li>🔥 <strong>Exclusive Deals & Discounts</strong> - Enjoy special discounts, pre-order benefits, and bundle offers you won’t find anywhere else.</li>
+                <li>📦 <strong>Fast & Secure Shipping</strong> - We ensure safe, fast, and well-packaged delivery to protect your Gunpla from damage during transit.</li>
+                <li>🛠️ <strong>Gunpla Tools & Accessories</strong> - From nippers, panel liners, and display stands—we provide everything you need to build and customize your Gundam models.</li>
+                <li>💬 <strong>Expert Support & Community</strong> - Need help with a build? Our team and community of Gunpla enthusiasts are here to assist with tips, guides, and recommendations.</li>
+                <li>⭐ <strong>Customer Satisfaction Guarantee</strong> - Your happiness is our priority! Hassle-free returns and excellent customer support ensure a smooth shopping experience.</li>
             </ul>
         </div>
 
         <!-- Carousel Section -->
-        <div class="col-lg-6 col-md-6">
+        <div class="col-lg-6 col-md-6 col-12 mt-4 mt-md-0">
             <div class="card text-center shadow">
                 <div class="card-body p-3">
                     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
@@ -92,8 +92,6 @@
                             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" aria-label="Slide 7"></button>
                             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7" aria-label="Slide 8"></button>
                             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8" aria-label="Slide 9"></button>
- 
-
                         </div>
 
                         <!-- Carousel Items -->
