add s81 activity code

--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
 		<!-- Landing End -->
 
 		<!-- Heading -->
-<div class="container-fluid py-5" id="heading">
+<div class="container-fluid py-2" id="heading">
     <div class="row justify-content-center align-items-center py-md-5 my-md-1">
         
         <!-- Heading Section -->
         <div class="col-lg-5 col-md-6 col-12 text-center text-md-start">
-            <h1 id="text-title" class="mb-4">Why Choose Us?</h1>
-            <h3 class="text2">🏆 Premium Gunpla Selection</h3>
+            <h1 id="text-title" class="mb-4 text-center" >Why Choose Us?</h1>
+            <h3 class="text2 text-center">🏆 Premium Gunpla Selection</h3>
             <p class="text mt-3">We offer an exclusive range of high-quality Gundam model kits for every collector and enthusiast.</p>
             <ul class="text text-start">
                 <li>🚀 <strong>Authenticity Guaranteed</strong> - All our kits are 100% official Bandai products—no bootlegs, just top-quality Gunpla!</li>
